# geometry-processing-starter-kit

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
cmake/: FindPolyscope.cmake  FindTinyAD.cmake
src/: ADFuncRunner.h  Mint2DHook.cpp  Mint2DHook.h  PhysicsHook.h  UtilsMisc.h  VizHelper.h  VizHook.h  main.cpp  main_.cpp
src/cyborgcode/: AppState.cpp  AppState.h  DirectoryScanner.cpp  DirectoryScanner.h  FileParser.cpp  FileParser.h  GUIContext.cpp  README.md
tools/01_basic_test/: CMakeLists.txt
tools/01_basic_test/src/: VizHook.h
tools/02_tiny_ad_test/: CMakeLists.txt
tools/02_tiny_ad_test/src/: VizHook.h
tools/03_disk_bvp_v1/: CMakeLists.txt
tools/03_disk_bvp_v1/src/: VizHook.h  main.cpp
tools/04_disk_bvp_wdelta/: CMakeLists.txt
tools/04_disk_bvp_wdelta/src/: VizHook.h
tools/05_disk_bvp_moments/: CMakeLists.txt  conv_plot_data.csv
tools/05_disk_bvp_moments/src/: VizHook.h  main.cpp
tools/05_disk_bvp_vtv/: CMakeLists.txt
tools/06_disk_bvp_moments/src/: VizHook.h
tools/06_disk_bvp_with_gamma/: CMakeLists.txt
tools/06_disk_bvp_with_gamma/src/: VizHook.h
tools/06_disk_prox_gamma/: CMakeLists.txt
tools/06_disk_prox_gamma/src/: VizHook.h
tools/07_disk_bvp_with_gamma_jacobian/: CMakeLists.txt
tools/07_disk_bvp_with_gamma_jacobian/src/: VizHook.h
